--- a/00.md
+++ b/00.md
@@ -178,16 +178,16 @@ sequenceDiagram
 
 Входящие события:
 
-  1. Управление пользователями:
+  * Управление пользователями:
   	* Регистрация воркера [US-271]
   	* Прохождение теста [US-271]
   	* Получение результатов обработки теста [US-271]
-  2. Управление заказами:
+  * Управление заказами:
     * Изменение статуса услуги [US-272, US-273, US-276]
     * Результат контроля качества [US-275]
-  3. Биллинг
-  	* Выставление инвойса [US-274]
-  	* Оплата инвойса [US-274]
+  * Биллинг
+  	 * Выставление инвойса [US-274]
+  	 * Оплата инвойса [US-274]
 
 
 # Диаграммы статусов
