--- a/01.md
+++ b/01.md
@@ -2,7 +2,7 @@
 
 - [x] Сделайте event storming модель проекта
 
-Event Storming модель проекта: [Make cats free again (miro)](https://miro.com/app/board/uXjVNMqmJhE=/).
+Event Storming модель проекта: [Make cats free again (miro)](https://miro.com/app/board/uXjVNMqmJhE=/?moveToWidget=3458764570663172004&cot=14).
 
 Группировал "близкие по смыслу" команды и события. А также, чтобы минимизировать количество стрелочек между группами. Смущают 
 
