--- a/01.md
+++ b/01.md
@@ -2,13 +2,17 @@
 
 - [x] Сделайте event storming модель проекта
 
-Event Storming модель проекта: [Make cats free again (miro)](https://miro.com/app/board/uXjVNMqmJhE=/?moveToWidget=3458764570663172004&cot=14).
+Event Storming модель проекта: [Make cats free again (ES)](https://miro.com/app/board/uXjVNMqmJhE=/?moveToWidget=3458764570663172004&cot=14).
 
 Группировал "близкие по смыслу" команды и события. А также, чтобы минимизировать количество стрелочек между группами. Смущают 
 
-- [ ] Сделайте модель данных для требуемой системы
+- [x] Сделайте модель данных для требуемой системы
+
+Ссылка на модель данных: [Make cats free again (модель)](https://lucid.app/lucidchart/7df896ef-960b-4436-9f67-97c6eb9d2138/edit?invitationId=inv_e722043b-7887-4b28-af86-216a8699e6ac)
 
 - [ ] Сделайте общую модель всех полученных коммуникаций в системе
+
+Здесь наверное не очень понял, если у меня монолит, есть ли коммуникации по данным. А коммуникация по событиям есть в ES.
 
 - [x] Выберите подходящую реализацию проекта (монолит или сервисы, как элементы системы связаны между собой)
 
