--- a/01.md
+++ b/01.md
@@ -8,7 +8,7 @@ Event Storming модель проекта: [Make cats free again (ES)](https://
 
 - [x] Сделайте модель данных для требуемой системы
 
-Ссылка на модель данных: [Make cats free again (модель)](https://lucid.app/lucidchart/7df896ef-960b-4436-9f67-97c6eb9d2138/edit?invitationId=inv_e722043b-7887-4b28-af86-216a8699e6ac)
+Ссылка на модель данных: [Make cats free again (модель)](https://lucid.app/documents/view/7df896ef-960b-4436-9f67-97c6eb9d2138)
 
 - [ ] Сделайте общую модель всех полученных коммуникаций в системе
 
